--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,9 @@ dmypy.json
 signals-data-wrangling/
 *.pkl
 *.pickle
+*.html
+topic_modelling/full_asymmetric_symmetric_8
+*.state
+*.npy
+*.id2word
+topic_modelling/lda_8
