--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,4 @@ topic_modelling/last_run/cv_best_0.1_0.1_3
 topic_modelling/last_run/cv_best_symmetric_0.1_9
 topic_modelling/old/full_asymmetric_symmetric_8
 topic_modelling/old/lda_8
+*.xml
